--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 2.5.9[/B]
+-  Fixed Tune.pk links. Fixed playwire logo issue
+
 [B]Version 2.5.8[/B]
 -  Fixed dailymotion links for Pakistani channels. Added new VideoHut source
 
