--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,18 @@
+[B]Version 2.5.14[/B]
+-  Added IBN7, India TV
+
+[B]Version 2.5.13[/B]
+-  Fixed sources
+
+[B]Version 2.5.12[/B]
+-  Added Epic Channel
+
+[B]Version 2.5.11[/B]
+-  Added 9xTashan
+
+[B]Version 2.5.10[/B]
+-  Fixed 9xM and 9xJalwa, Added MTunes. Added Video Tanker source, Fixed VidTo source
+
 [B]Version 2.5.9[/B]
 -  Fixed Tune.pk links. Fixed playwire logo issue
 
@@ -14,7 +29,7 @@
 - Fixed dailymotion link. 
 
 [B]Version 2.5.3 - 2.5.4[/B]
-- Fixed playwire link for movies.
+- Fixed playwire link for movies. 
 
 [B]Version 2.5.2[/B]
 - Fixed playwire links and sony PAL, thanks to jchirag0221 for fix. 
